--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ ol {
   align-items: center;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', Arial, Helvetica, sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   inline-size: 1140px;
@@ -128,10 +128,6 @@ ol {
   outline: none;
 }
 
-.search-form__textfield:focus-visible {
-  outline: none;
-}
-
 .search-form__label {
   display: flex;
   align-items: center;
@@ -145,7 +141,7 @@ ol {
   outline-offset: 1px;
 }
 
-.search-form__label:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline 1px #fff;
   text-underline-offset: 5px;
 }
@@ -162,7 +158,7 @@ ol {
   block-size: 19px;
 }
 
-.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+.search-form__checkbox:checked+.search-form__pseudo-checkbox::after {
   content: '';
   display: block;
   background-color: #fff;
@@ -172,13 +168,13 @@ ol {
 }
 
 .button {
-  border: 1px solid #fff;
   padding: 6px 0;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: 'Fira Sans Condensed', Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 18px;
   text-align: center;
+  border: 1px solid currentColor;
   background-color: transparent;
   cursor: pointer;
   inline-size: 100%;
@@ -237,17 +233,12 @@ ol {
   block-size: 298px;
 }
 
-.content__list::-webkit-scrollbar {
-  display: none;
-}
-
 .content__list-item:not(:last-child) {
   margin-bottom: 30px;
 }
 
 .content__card-link {
   display: block;
-  margin: 2px;
   text-decoration: none;
 }
 
@@ -264,6 +255,7 @@ ol {
 }
 
 .content__card-link:focus {
+  margin: 2px;
   outline: none;
 }
 
@@ -285,6 +277,10 @@ ol {
 }
 
 .content__video-card-title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 200px;
   padding: 2px 2px 5px;
   color: #fff;
   text-align: left;
@@ -298,6 +294,7 @@ ol {
 }
 
 .content__video-card-description {
+  max-width: 200px;
   padding: 0 2px;
   color: #fff;
   font-size: 18px;
