--- a/styles/style.css
+++ b/styles/style.css
@@ -55,9 +55,9 @@ ol {
   flex-direction: row;
   gap: 30px;
   align-items: flex-end;
-  justify-content: center;
+  justify-content: space-between;
   position: relative;
-  inline-size: 100%;
+  inline-size: 1140px;
 }
 
 .result__video-container {
@@ -206,7 +206,7 @@ ol {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  flex-shrink: 0;
+  inline-size: 100%;
   position: relative;
   gap: 26px;
 }
